--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="SoL8j53Pt51N5ZOyVLEamd6kqUGf_TFwgPlVFW55v-E" />
+  <meta name="msvalidate.01" content="B807FE4A03DB636D50EF7962DDBBE11F" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Learn how to perform a Garmin Venu 2S map update. Follow easy steps to ensure your GPS data is accurate and your smartwatch runs at peak performance." />
@@ -122,7 +124,7 @@
 
     <h3>Option 2: Update Using Garmin Express (PC or Mac)</h3>
     <ol>
-      <li>Install <a href="https://www.garmin.com/express" target="_blank">Garmin Express</a> on your computer.</li>
+      <li>Install Garmin Express on your computer.</li>
       <li>Connect your Garmin Venu 2S to the computer using its USB charging cable.</li>
       <li>Launch Garmin Express and follow the prompts to add your device.</li>
       <li>Click “Install All” if updates are found, including any GPS-related improvements.</li>
